refactor : 콘서트 아키텍처 변경