@@ -1,33 +1,29 @@
-package kr.hhplus.be.server.concert.controller;
+package kr.hhplus.be.server.reservation.interfaces.web.controller;
 
-import java.util.List;
-import java.util.stream.Collectors;
-import kr.hhplus.be.server.concert.dto.response.ConcertData;
-import kr.hhplus.be.server.concert.dto.response.ConcertResponse;
-import kr.hhplus.be.server.concert.service.ConcertService;
-import kr.hhplus.be.server.concert.domain.Concert;
+import kr.hhplus.be.server.reservation.application.concert.GetConcertsUseCase;
+import kr.hhplus.be.server.reservation.domain.model.Concert;
+import kr.hhplus.be.server.reservation.interfaces.web.dto.response.concert.ConcertData;
+import kr.hhplus.be.server.reservation.interfaces.web.dto.response.concert.ConcertResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
+
 @RestController
 @RequestMapping("/api/concert")
 @RequiredArgsConstructor
 public class ConcertController {
-
-    private final ConcertService concertService;
+    private final GetConcertsUseCase getConcertsUseCase;
 
     @GetMapping
     public ResponseEntity<ConcertResponse> getConcerts() {
-        List<Concert> concerts = concertService.getConcerts();
-
+        List<Concert> concerts = getConcertsUseCase.getConcerts();
         List<ConcertData> concertDataList = concerts.stream()
                 .map(ConcertData::from)
-                .collect(Collectors.toList());
-
+                .toList();
         return ResponseEntity.ok(new ConcertResponse(concertDataList));
     }
-
-}
+} 
